# ComfyUI_illumorae

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
ComfyUI_illumorae_CheckpointLoaderByStringDirty/: checkpoint_loader_by_string_dirty.py
ComfyUI_illumorae_CheckpointRandomSelector/: checkpoint_random_selector.py
ComfyUI_illumorae_ImageContrastLimitedAdaptiveHistogramEqualization/: image_CLAHE.py
ComfyUI_illumorae_ImageInfillDilation/: __init__.py  image_infill_dilation.py
ComfyUI_illumorae_ImageInfillPatchMatch/: __init__.py  image_infill_patchmatch.py
ComfyUI_illumorae_ImageInfillSimple/: __init__.py
ComfyUI_illumorae_ImageMultiScaleRetinexColorRestoration/: image_MSRCR.py
ComfyUI_illumorae_ImageResizeFluxKontextOptions/: __init__.py  flux_kontext_image_scale_options.py  image_resize_flux_kontext_options.py
ComfyUI_illumorae_ImageResizeWanAdaptiveFraming/: __init__.py  image_resize_wan_adaptive_framing.py
ComfyUI_illumorae_LoadImageFilePathOut/: load_image_filepath_out.py
ComfyUI_illumorae_LoadImageRandomVariants/: load_image_random_variant.py
ComfyUI_illumorae_LoadTextFileGraceful/: load_text_file_graceful.py
ComfyUI_illumorae_LoraTextStrengthMultiplier/: __init__.py  lora_text_strength_multiplier.py
ComfyUI_illumorae_LoraTextStrengthVariants/: __init__.py  lora_text_strength_variants.py
ComfyUI_illumorae_LoraTextVisualizer/: __init__.py  lora_text_visualizer.py
ComfyUI_illumorae_SaveAnimatedWebPExtendedFolderPath/: __init__.py  save_animated_webp_extended_folderpath.py
ComfyUI_illumorae_SaveImageExtendedFolderPath/: save_image_extended_folderpath.py
ComfyUI_illumorae_SelectITEMbyAmountGenerated/: select_item_by_amount_generated.py
(+13 files in other folders)
